--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="MDL - C.PNG" alt="Ryan Profile Picture"></td>
+      <td><img src="MDL - C.png" alt="Ryan Profile Picture"></td>
       <td><h1>Ryan James Reytas</h1>
       <a href="Contact Information.html"><strong>Contact Info</strong></a>
       <p><em>Founder and CTO of <strong><a href="https://appbrewery.com/">The App Brewery</a></strong></em></p>
